Add Shuang-fu introduction to homepage

--- a/index.html
+++ b/index.html
@@ -2,3 +2,14 @@
 layout: home
 author_profile: true
 ---
+
+我是 Shuang-fu，習慣以數據與邏輯驅動決策，專注投資、科技產業與 AI 供應鏈動態，也熱愛規劃旅行與提升生活效率。
+
+**我關注的領域與強項**
+
+- 投資：偏好短期高波動、高報酬的操作，會密切追蹤法說會、營收公告與市場傳聞，並觀察社群討論作為股價催化劑的判斷依據。
+- 產業研究：持續關注科技與 AI 供應鏈，擅長跨公司比較，如評估不同 AI 散熱廠商在供應鏈的定位，並研究估值模型與市場情緒；近期特別留意 TTD、VKTX、天虹科技等公司的走勢與基本面。
+- 旅遊與生活：喜歡細緻安排旅行（例如沖繩四天三夜自由行的景點、地圖圖層與浮潛活動），也經常研究房貸試算、耳機評價、建築成本、清潔維修等實用主題。
+- 語言與表達：對日文敬語與正式書面溝通有興趣，並具備撰寫職場信件與翻譯的經驗。
+
+無論是投資決策、科技趨勢、旅遊規劃或生活大小事，我都享受在問題中找到突破點並追求最佳解。
